# dbt_project_OLIST

./: .gitignore  .user.yml  OLIST_workspace.code-workspace  README.md  Run_Pipeline.bat  dbt pics.pptx  main.py  pyproject.toml  requirements.txt
dbt_olist/: .user.yml  dbt_project.yml  profiles.yml  requirements.txt
dbt_olist/models/mart/: BI_customer_cohorts.sql  BI_customer_rfm.sql  BI_product_performance.sql  BI_seller_performance.sql  DIM_order_reviews.sql  FACT_order_items.sql  FACT_orders.sql  _mart.yml
dbt_olist/models/staging/: STG_geolocation.sql  STG_orders.sql  _staging.yml
dbt_olist/seeds/: brazil_states.csv
dbt_olist/tests/: coordinates_validation.sql  payment_test_1.sql  payment_test_3.sql
dbt_olist/tests/generic/: not_negative.sql
olist/: .gitignore  dbt_project.yml  olist-ecommerce-2025-90493c1e49bc.json  packages.yml  profiles.yml
olist/analyses/: Analyses_01.sql  test.sql  test01.sql
olist/models/: properties.yml
olist/models/1_staging/: STG_sellers.sql
olist/models/2_intermediate/: INT_agg_order_payments.sql  INT_customers.sql  INT_order_items_agg.sql  INT_order_payments_agg.sql  INT_orders.sql  INT_orders_cleansed.sql
olist/models/mart/: BI_delivery_performance.sql  BI_product_performance.sql  DIM_customers.sql  DIM_date.sql  DIM_order_reviews.sql  DIM_products.sql  DIM_sellers.sql  FACT_order_items.sql  FACT_orders.sql
olist/models/staging/: STG_customers.sql  STG_order_items.sql  STG_order_payments.sql  STG_order_reviews.sql  STG_products.sql  _sources.yml  _staging.yml
olist/tests/: coordinates_validation.sql  delivery_date_check.sql  latitude_check.sql  longitude_check.sql  payment_test_1.sql  payment_test_2.sql  payment_test_3.sql  payment_test_4.sql
powerbi/: File_01.pbix
python/config/: gc_credentials.py
python/notebooks/: data_exploration.ipynb  data_exploration2.ipynb  data_exploration3.ipynb
python/output/: AI_Report_Gemini.txt  AI_Report_OpenAI.txt  business_context.txt
python/output/Analysis/: category_performance_report.json  cohort_analysis_report.json  delivery_performance_report.json  monthly_time_series_report.json  product_performance_report.json  region_performance_report.json  rfm_analysis_report.json
python/output/Anomaly_Detection/: delivery_duration.json  order_cancellations.json  successful_orders.json
python/output/QC_Reports/: PRODUCTS.json  SELLERS.json
python/outputs/Analysis/: business_context.txt  cohort_analysis_report.json  overall_business_metrics_report.json  region_performance_report.json  seller_performance_report.json
python/outputs/Anomaly_Detection/: delivery_duration.json  sales.json  successful_orders.json
python/outputs/QC_Reports/: CUSTOMERS.json  GEOLOCATION.json  ORDERS.json  ORDER_ITEMS.json  ORDER_PAYMENTS.json  ORDER_REVIEWS.json
python/scripts/: run_all.py
python/src/: ai_generator.py  ai_generator_genai.py  ai_generator_openai.py  analysis.py  anomaly_detection.py  context_builder.py  data_qc_report.py  raw_data_qc.py  sql_queries.py  utils.py
