[project]
name = "dbt-project-olist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agate==1.9.1",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "argcomplete==3.6.3",
    "attrs==25.4.0",
    "authlib==1.6.5",
    "babel==2.17.0",
    "beartype==0.22.4",
    "black==25.9.0",
    "cachetools==6.2.1",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "codegen==0.57.0",
    "codegen-api-client==1.0.0",
    "codeowners==0.8.0",
    "colorama==0.4.6",
    "colorlog==6.10.1",
    "cryptography==46.0.3",
    "cyclopts==4.0.0",
    "daff==1.4.2",
    "datamodel-code-generator==0.35.0",
    "db-dtypes==1.4.3",
    "dbt-adapters==1.17.3",
    "dbt-bigquery==1.10.2",
    "dbt-common==1.33.0",
    "dbt-core==1.10.13",
    "dbt-extractor==0.6.0",
    "dbt-protos==1.0.382",
    "dbt-semantic-interfaces==0.9.0",
    "deepdiff==8.6.1",
    "deprecated==1.2.18",
    "diskcache==5.6.3",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "docutils==0.22.2",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.0",
    "fastjsonschema==2.21.2",
    "fastmcp==2.13.0.1",
    "genson==1.3.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "giturlparse==0.14.0",
    "google-api-core==2.27.0",
    "google-auth==2.41.1",
    "google-auth-oauthlib==1.2.2",
    "google-cloud-aiplatform==1.122.0",
    "google-cloud-bigquery==3.38.0",
    "google-cloud-core==2.4.3",
    "google-cloud-dataproc==5.23.0",
    "google-cloud-resource-manager==1.15.0",
    "google-cloud-storage==2.19.0",
    "google-crc32c==1.7.1",
    "google-genai==1.46.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.71.0",
    "grpc-google-iam-v1==0.14.3",
    "grpcio==1.76.0",
    "grpcio-status==1.76.0",
    "h11==0.16.0",
    "hatch-vcs==0.5.0",
    "hatchling==1.27.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "humanize==4.14.0",
    "idna==3.11",
    "importlib-metadata==8.7.0",
    "inflect==7.5.0",
    "isodate==0.6.1",
    "isort==6.1.0",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.0.1",
    "jaraco-functools==4.3.0",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.9.1",
    "jupyter-core==5.9.1",
    "keyring==25.6.0",
    "lazy-object-proxy==1.12.0",
    "leather==0.4.0",
    "linkify-it-py==2.0.3",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mashumaro==3.14",
    "mcp==1.19.0",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "msgpack==1.1.2",
    "mypy-extensions==1.1.0",
    "nbformat==5.10.4",
    "networkx==3.5",
    "numpy==2.3.4",
    "oauthlib==3.3.1",
    "openapi-core==0.19.5",
    "openapi-pydantic==0.5.1",
    "openapi-schema-validator==0.6.3",
    "openapi-spec-validator==0.7.2",
    "opentelemetry-api==1.38.0",
    "opentelemetry-exporter-otlp==1.38.0",
    "opentelemetry-exporter-otlp-proto-common==1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.38.0",
    "opentelemetry-exporter-otlp-proto-http==1.38.0",
    "opentelemetry-proto==1.38.0",
    "opentelemetry-sdk==1.38.0",
    "opentelemetry-semantic-conventions==0.59b0",
    "orderly-set==5.5.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandas-gbq==0.29.2",
    "parse==1.20.2",
    "parsedatetime==2.6",
    "pathable==0.4.4",
    "pathspec==0.12.1",
    "pathvalidate==3.3.1",
    "platformdirs==4.5.0",
    "pluggy==1.6.0",
    "proto-plus==1.26.1",
    "protobuf==6.33.0",
    "psutil==7.1.2",
    "py-key-value-aio==0.2.8",
    "py-key-value-shared==0.2.8",
    "pyarrow==22.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pydantic-settings==2.11.0",
    "pydata-google-auth==1.9.1",
    "pygithub==2.6.1",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pynacl==1.6.0",
    "pyperclip==1.11.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "python-slugify==8.0.4",
    "pytimeparse==1.1.8",
    "pytokens==0.2.0",
    "pytz==2025.2",
    "pywin32==311",
    "pywin32-ctypes==0.2.3",
    "pyyaml==6.0.3",
    "referencing==0.36.2",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rfc3339-validator==0.1.4",
    "rich==14.2.0",
    "rich-rst==1.3.2",
    "rpds-py==0.28.0",
    "rsa==4.9.1",
    "sentry-sdk==2.29.1",
    "setuptools==80.9.0",
    "setuptools-scm==9.2.2",
    "shapely==2.1.2",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "snowplow-tracker==1.1.0",
    "sqlparse==0.5.3",
    "sse-starlette==3.0.2",
    "starlette==0.48.0",
    "tenacity==9.1.2",
    "text-unidecode==1.3",
    "textual==6.4.0",
    "traitlets==5.14.3",
    "trove-classifiers==2025.9.11.17",
    "typeguard==4.4.4",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "uc-micro-py==1.0.3",
    "unidiff==0.7.5",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "websockets==15.0.1",
    "werkzeug==3.1.1",
    "wrapt==1.17.3",
    "zipp==3.23.0",
]
